fixed logo for both student and teacher sidebar issue was on chrome the logo was off centered

--- a/students/BaseStudent/static/css/BaseStudent.css
+++ b/students/BaseStudent/static/css/BaseStudent.css
@@ -85,6 +85,17 @@ body {
     padding: 35px 20px;
     border: 1px solid #e9ecef;
 }
+/*-------------------------------------------------------------------------
+ * Author:          Saim Munshi
+ * Type:            Sidebar Styling
+ * Last Modified:   2026-03-29
+ * Purpose:         side pill logo css
+ *-------------------------------------------------------------------------*/
+.sidebar-pill-logo{
+    width: 40px; 
+    height: auto; 
+    display: block;
+}
 
 /*-------------------------------------------------------------------------
  * Author:          Saim Munshi
